# snap

./: .travis.yml  CMakeLists.txt  MIT-LICENSE  README.md  cmakesnap-config.cmake  index.html  install.py  params.json  run_tests.sh
examples/: CMakeLists.txt  myproto.proto
examples/cpp/: CMakeLists.txt  handy_header_lib.hpp  hello_snap.cpp
examples/cpp/base64/: CMakeLists.txt  base64.h  base64_test.cpp
examples/cpp/qt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowA.cpp  MainWindowA.h  main.cpp
examples/java/: CMakeLists.txt  HelloSnap.java  MyLib.java
examples/py/: CMakeLists.txt  breaking_news.cpp  breaking_news.h  py_breaking_news.i  test_breaking_news.py
internal/: config.cmake.in  cpp_binary.cmake  cpp_common.cmake  cpp_compiler_tweaks.cmake  cpp_install_common.cmake  cpp_library.cmake  java_binary.cmake  java_common.cmake  java_library.cmake  load_required_packages.cmake  local_resources.cmake  macro_utils.cmake  proto_library.cmake  protobuf_swig_helper.in  py_binary.cmake  py_common.cmake  py_library.cmake  py_swig.cmake  remote_resources.cmake  sys_package_utils.cmake  testing.cmake
internal/tools/: qtTools.cmake
internal/util/: snap-toggle.py
sys/: FindSYS-avcodec.cmake  FindSYS-libunwind.cmake  FindSYS-ogre.cmake  FindSYS-ois.cmake  FindSYS-qt4.cmake  FindSYS-qt5.cmake  FindSYS-sdl.cmake  FindSYS-swscale.cmake  FindSYS-z.cmake
